fixed spacing

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body {
 }
 .footer {
     background-color: #ab8885;
+    position: absolute;
     width: 100%;
     height: 30%;
     color: white;
@@ -82,7 +83,7 @@ body {
   }
 .centered {
     position: absolute;
-    top: 90%;
+    top: 85%;
     left: 50%;
     transform: translate(-50%,-50%);
   }
@@ -438,16 +439,25 @@ body {
     left: 43%;
     }
       
-.fire-alarm, .water-rats {
+.fire-alarm {
         font-size: 30px;
         position: absolute;
         left: 70%;
+        top: 30%;
     }
+
+    .water-rats {
+      font-size: 30px;
+      position: absolute;
+      left: 70%;
+      top: 140%;
+  }
 
 .snakes {
     font-size: 30px;
     position: absolute;
     left: 60%;
+    top: 250%;
 }
 
 .fire-alarm-p {
@@ -458,11 +468,20 @@ body {
         width: 45%;
     }
       
-.water, .robot {
+.water {
         font-size: 30px;
         position: absolute;
         left: 10%;
+        top: 90%;
     }
+
+.robot {
+      font-size: 30px;
+      position: absolute;
+      left: 10%;
+      top: 190%;
+  }
+
 .water-p {
         font-size: 20px;
         position: absolute;
@@ -475,14 +494,14 @@ body {
         font-size: 20px;
         position: absolute;
         left: 54%;
-        top: 180%;
+        top: 150%;
         width: 45%;
     }
 .robot-p {
         font-size: 20px;
         position: absolute;
         left: 3%;
-        top: 250%;
+        top: 200%;
         width: 45%;
     }
 
@@ -490,7 +509,7 @@ body {
         font-size: 20px;
         position: absolute;
         left: 54%;
-        top: 310%;
+        top: 260%;
         width: 45%;
     }
       
@@ -615,42 +634,42 @@ body {
 }
 
 .rectangle-1 {
-        background-color: #cadde3;
-        border-style: solid;
-        border-color: #9fb5bc;
-        height: 8%;
-        width: 70%;
-        z-index: -1;
-        position: absolute;
-        left: 15%;
-        }
+  background-color: #cadde3;
+  border-style: solid;
+  border-color: #9fb5bc;
+  height: 5%;
+  width: 70%;
+  z-index: -1;
+  position: absolute;
+  left: 15%;
+  }
 
 .rectangle-2 {
-            background-color: #cadde3;
-            border-style: solid;
-            border-color: #9fb5bc;
-            height: 8%;
-            width: 70%;
-            z-index: -1;
-            position: absolute;
-            top: 142.3%;
-            left: 15%;
-            display: flex;
-            justify-content: center;
-        }
+  background-color: #cadde3;
+  border-style: solid;
+  border-color: #9fb5bc;
+  height: 5%;
+  width: 70%;
+  z-index: -1;
+  position: absolute;
+  top: 124%;
+  left: 15%;
+  display: flex;
+  justify-content: center;
+}
         
 .rectangle-3 {
-            background-color: #cadde3;
-            border-style: solid;
-            border-color: #9fb5bc;
-            height: 8%;
-            width: 70%;
-            z-index: -1;
-            position: absolute;
-            top: 152%;
-            left: 15%;
-            display: flex;
-            justify-content: center;
+  background-color: #cadde3;
+  border-style: solid;
+  border-color: #9fb5bc;
+  height: 5%;
+  width: 70%;
+  z-index: -1;
+  position: absolute;
+  top: 130%;
+  left: 15%;
+  display: flex;
+  justify-content: center;
         }
 
 .rectangle-4 {
